Added: Content wizard for 'Clickable Box'
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/extjs_content/trunk@48531 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2011-06-10 Daniel Alder <daniel.alder@ymail.com>
 
+	* Added: Content wizard for 'Clickable Box'
 	* Changed: 'Clickable Box' is now a separate CType with Rendering from textpic incl. additional link field
 
 2011-04-16 Daniel Alder  <daniel.alder@ymail.com>
